Feat: show both html and output
* Fixed the size of the svg so that it's big enough to show the grid.
* Resized the iframe to match the size of the included document.
* Skipped loading data if the corresponding prop wasn't set.

--- a/pagestyle.css
+++ b/pagestyle.css
@@ -27,9 +27,17 @@ footer {
     min-height: 3em;
     text-align: center;
 }
+figure {
+    /*
+       I can't have a margin on this because it messes up the
+       calculations for my iframe sizing, so instead I have a padding
+     */
+    margin: 0;
+    padding: 0.5em 1em;
+}
 svg {
+    display: block;
     background: white;
-    overflow: visible;
 }
 
 /* the draggable elements all have data-name= ; I want them to stand out */
