--- a/pagestyle.css
+++ b/pagestyle.css
@@ -5,6 +5,8 @@
 html, body {
     padding: 0;
     margin: 0;
+    accent-color: hsl(0 30% 60%);
+
 }
 html {
     background-color: white;
@@ -35,8 +37,11 @@ figure {
     margin: 0;
     padding: 0.5em 1em;
 }
-svg {
+svg, figure > label {
     display: block;
+}
+input {
+    vertical-align: bottom;
 }
 
 /* the draggable elements all have data-name= ; I want them to stand out */
