Feat: measure lines
* Also fixed a bug in the highlighting that didn't allow numerals in
  the attribute names. Needed for <line :x1="…">
* Also fixed some links.

--- a/pagestyle.css
+++ b/pagestyle.css
@@ -36,6 +36,9 @@ figure {
     margin: 0;
     padding: 0.5em 1em;
 }
+figcaption {
+    text-align: center;
+}
 svg, figure > label {
     display: block;
 }
